--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background-color: #455166;
+  background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
