--- a/src/css/Account.css
+++ b/src/css/Account.css
@@ -1,7 +1,7 @@
 .Account-header {
     padding: 60px;
     text-align: center;
-    background: #455166;
+    background-image: url("https://images.unsplash.com/photo-1536440136628-849c177e76a1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1225&q=80");
     color: white;
     font-size: calc(10px + 2vmin);
   }
