--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,6 +1,17 @@
 .text {
   text-align: center;
   color: white;
+  font-size: 3rem;
+  font-family: 'Montserrat', sans-serif;
+  line-height: 0;
+}
+
+.movieTitle {
+  text-align: center;
+  color: white;
+  font-size: 1.2rem;
+  font-family: 'Montserrat', sans-serif;
+  line-height: 1.2;
 }
 
 .container {
@@ -14,4 +25,5 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  font-family: 'Montserrat', sans-serif;
 }
