--- a/src/css/Movie.css
+++ b/src/css/Movie.css
@@ -1,5 +1,8 @@
-.text {
-    text-align: center;
+.heading {
+    font-size: calc(6px + 2vmin);
+    font-family: 'Montserrat', sans-serif;
+    line-height: 2;
+    color: white;
   }
   
 .container {
@@ -11,8 +14,25 @@
     text-align: center;
     font-size: calc(6px + 2vmin);
     color: white;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .right {
     text-align: right;
-}
+} 
+
+.text {
+    font-size: calc(2px + 2vmin);
+    font-family: 'Montserrat', sans-serif;
+    line-height: 1.2;
+    color: white;
+    text-align: left;
+  }
+
+  .button {
+    font-size: calc(4px + 2vmin);
+    font-family: 'Montserrat', sans-serif;
+    line-height: 1.2;
+    color: white;
+    text-align: center;
+  }
